--- a/web/alives.html
+++ b/web/alives.html
@@ -1,7 +1,7 @@
 <!--
   ~     Plik alives.html jest częścią projektu Killer System - Prostego narzędzia do prowadzenia gry w killera
   ~     Kod źródłowy: https://bitbucket.org/fedox8/boom-killer/src
-  ~     Copyright (C) 15/08/2019, 20:02  Mikołaj Bogucki, Jeremiasz Mazur, Anna Basiura
+  ~     Copyright (C) 20/08/2019, 12:51  Mikołaj Bogucki, Jeremiasz Mazur, Anna Basiura
   ~
   ~     This program is free software: you can redistribute it and/or modify
   ~     it under the terms of the GNU General Public License as published by
@@ -23,10 +23,11 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, maximum-scale=1">
     <title>Killer Lista</title>
+    <meta name="theme-color" content="#222">
 </head>
 <body style="  text-align: center; font-size: 18px;  background: #222;
     color: #ff5f5f;">
-<h2>Lista MARTWYCH</h2>
+<h2>Lista Martwych</h2>
 <div id="data">
 
 </div>
@@ -38,7 +39,7 @@
             return response.json();
         }).then(function (myJson) {
             for (let i = 0; i < myJson.length; i++) {
-                statedata = statedata + '<tr><td>' + myJson[i].name + '</td></tr>'
+                statedata = statedata + `<tr><td>${myJson[i].name}</td><td>${myJson[i].killCount}</td></tr>`;
                 document.getElementById('data').innerHTML = statedata
             }
             statedata = +'</table>'
