--- a/web/alives.html
+++ b/web/alives.html
@@ -1,7 +1,7 @@
 <!--
   ~     Plik alives.html jest częścią projektu Killer System - Prostego narzędzia do prowadzenia gry w killera
   ~     Kod źródłowy: https://bitbucket.org/fedox8/boom-killer/src
-  ~     Copyright (C) 20/08/2019, 12:51  Mikołaj Bogucki, Jeremiasz Mazur, Anna Basiura
+  ~     Copyright (C) 20/08/2019, 19:47  Mikołaj Bogucki, Jeremiasz Mazur, Anna Basiura
   ~
   ~     This program is free software: you can redistribute it and/or modify
   ~     it under the terms of the GNU General Public License as published by
@@ -27,13 +27,20 @@
 </head>
 <body style="  text-align: center; font-size: 18px;  background: #222;
     color: #ff5f5f;">
-<h2>Lista Martwych</h2>
-<div id="data">
+<h2>Leaderboard</h2>
+<div style="display: flex; justify-content: space-evenly">
+    <div id="data">
 
+    </div>
+    <div id="data2">
+
+    </div>
 </div>
 </body>
 <script>
-    let statedata = '<table style="margin: 0 auto">';
+    let statedata = '<h3>Jeszcze żywi</h3><table style="margin: 0 auto">';
+    let statedata2 = '<h3>Już Martwi</h3><table style="margin: 0 auto">';
+
     window.onload = () => {
         fetch('./killed.php').then(function (response) {
             return response.json();
@@ -43,6 +50,15 @@
                 document.getElementById('data').innerHTML = statedata
             }
             statedata = +'</table>'
+        });
+        fetch('./alive.php').then(function (response) {
+            return response.json();
+        }).then(function (myJson) {
+            for (let i = 0; i < myJson.length; i++) {
+                statedata2 = statedata2 + `<tr><td>${myJson[i].name}</td><td>${myJson[i].killCount}</td></tr>`;
+                document.getElementById('data2').innerHTML = statedata2
+            }
+            statedata2 = +'</table>'
         })
     }
 </script>
