--- a/web/index.html
+++ b/web/index.html
@@ -1,7 +1,7 @@
 <!--
   ~     Plik index.html jest częścią projektu Killer System - Prostego narzędzia do prowadzenia gry w killera
   ~     Kod źródłowy: https://bitbucket.org/fedox8/boom-killer/src
-  ~     Copyright (C) 20/08/2019, 13:23  Mikołaj Bogucki, Jeremiasz Mazur, Anna Basiura
+  ~     Copyright (C) 21/08/2019, 09:47  Mikołaj Bogucki, Jeremiasz Mazur, Anna Basiura
   ~
   ~     This program is free software: you can redistribute it and/or modify
   ~     it under the terms of the GNU General Public License as published by
@@ -42,6 +42,9 @@
             <div id="target"></div>
         </form>
     </div>
+    <div class="tip">Aby dowiedzieć się kogo musisz wyeliminować, wpisz swój kod powyżej.<br><br>Aby poinformować system
+        o eliminacji, wpisz swój kod, a następnie kod który miała ofiara
+    </div>
 </div>
 <script>
     let el1 = document.getElementById('code-entry1');
@@ -60,6 +63,14 @@
             .then(function (myJson) {
                 if (myJson.name == false) {
                     error.innerHTML = 'Kod który podałeś nie został odnaleziony w bazie operacyjnej';
+                    target.innerHTML = '';
+                    btn2.style.display = "none";
+                    btn1.style.display = "block";
+
+                    el2.style.display = "none";
+                    el1.style.display = "block";
+                } else if (myJson.isDead == true) {
+                    error.innerHTML = 'Nie żyjesz';
                     target.innerHTML = '';
                     btn2.style.display = "none";
                     btn1.style.display = "block";
