--- a/web/index.html
+++ b/web/index.html
@@ -103,6 +103,6 @@
             });
     });
 </script>
-<div class="source-page"><a href="https://bitbucket.org/fedox8/boom-killer/src/master/">SOURCE</a></div>
+<div class="source-page"><a href="https://github.com/fe-dox/killer/">SOURCE</a></div>
 </body>
 </html>
