--- a/web/index.html
+++ b/web/index.html
@@ -42,6 +42,10 @@
             <div id="target"></div>
         </form>
     </div>
+  <div style="color:white">
+<h1 style="font-weight: 100;">MiniPomoc</h1>Aby dowiedzieć się kogo musisz wyeliminować, wpisz swój kod powyżej.<br><br>Aby poinformować system o eliminacji, wpisz swój kod, a następnie kod który miała ofiara<br><br>
+<h1 style="font-weight: 100;">Zasady</h1>1. Nie zabijamy w trakcie grania w brydża.<br>2. Aby kogoś zabić, ktoś musi wziąć świadomie(nie bezwarunkowo) wszystkie przedmioty z ręki zabójcy (podawanie ciastek z pudełka się nie liczy)
+</div>
 </div>
 <script>
     let el1 = document.getElementById('code-entry1');
