--- a/web/alives.html
+++ b/web/alives.html
@@ -55,7 +55,7 @@
                 killedData += `<tr><td>${person.name}</td><td>${person.killCount}</td></tr>`;
                 document.getElementById('killedData').innerHTML = killedData
             }
-            statedata += '</table>'
+            killedData += '</table>'
         });
 
         let aliveData = '<h3>Jeszcze żywi</h3><table style="margin: 0 auto">';
